2004-12-23 06:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormClassPanel.gorm: Set nextKeyView for all views
	in the window and the initialFirstResponder of the window to the
	table view.

2004-12-23 06:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Fix for issue when loading from gmodel.
	Corrected _refreshView: and searchForClass: so that if list is nil,
	the selection isn't set.
	* Gorm.spec.in: Minor correction.

2004-12-19 09:05 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: Added [super init] call to
	init.
	* GormLib/IBInspectorManager.m: Corrected init.

2004-12-19 08:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.h: Changed parent class.
	* GormInspectorsManager.m: Added notification 
	IBWillInspectoObjectNotification.
	* GormLib/GNUmakefile: Added new class.
	* GormLib/IBInspectorManager.h: New class
	* GormLib/IBInspectorManager.m: New class
	* GormLib/InterfaceBuilder.h: Added new class.
	* Gorm.m: Coerce IBInspectorManager to GormInspectorsManager.

2004-12-18 13:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBApplicationAdditions.h
	* GormLib/IBConnectors.h
	* GormLib/IBDocuments.h
	* GormLib/IBEditors.h
	* GormLib/IBPalette.h
	* GormLib/IBSystem.h: Changed IB_EXPORT to IB_EXTERN.

2004-12-18 10:05 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m:
	* GormFilesOwner.m:
	* Gorm.m:
	* GormPalettesManager.m:
	* GormWindowEditor.m: Changed NSRunAlertPanel(...) calls
	to use nil instead of NULL.  NULL shouldn't be used.

2004-12-18 08:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile: Added new header
	* GormLib/GNUmakefile.preamble: Added comment.
	* GormLib/IBApplicationAdditions.h: Add include, change extern to 
	IB_EXPORT
	* GormLib/IBConnectors.h: Same
	* GormLib/IBDocuments.h: Same
	* GormLib/IBEditors.h: Same
	* GormLib/IBPalette.h: Same